--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <link rel="icon" href="images/amzn.png">
+  <link rel="icon" href="https://th.bing.com/th/id/OIP.XVG1A3K8KsIWzckT_E6NRAHaHa?w=558&h=558&rs=1&pid=ImgDetMain">
 
   <link rel="stylesheet" href="index.css">
 
